<resources>
    <string name="app_name">Ingresar</string>
    <string name="title_activity_login">Monkey Flip</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="nuevoenmonkeyflip">¿Nuevo en Monkey Flip? ¡Bienvenido!</string>
    <string name="registratedebajo">Registrate debajo...</string>
    <string name="nuevoprod">NUEVO PRODUCTO</string>
    <string name="welcome">"Welcome !"</string>
    <string name="ramiro">"Ramiro Manuel Pignol"</string>
    <string name="ites">"Ites 2020 Programacion Movil"</string>
    <string name="derechos">"Todos los derechos e izquierdos reservados"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="recuperar">Recuperar usuario</string>
    <string name="login_failed">"Login failed"</string>
    <string name="FORGOT">"Olvide contrasenia"</string>
    <string name="OlvidasteContrasenia">Olvidaste tu contrasenia? Ingresa tu ID debajo para recuperar los datos de tu cuenta</string>

    <color name="black">#000000</color>
    <color name="lightgray">#999999</color>
    <color name="white">#FFFFFF</color>
    <color name="darkgray">#666666</color>
    <string-array name="categorias">
        <item>Alimentos</item>
        <item>Computacion</item>
        <item>Ejercicio</item>
        <item>Inmuebles</item>
        <item>Instrumentos</item>
        <item>Vehiculos</item>
    </string-array>
    <string-array name="contextmenu">
        <item>Delete</item>
    </string-array>
    <string name="precioprod">"Precio producto"</string>
    <string name="nombreprod">"Nombre producto"</string>
    <string name="enlaceprod">"Enlace imagen"</string>
    <string name="descprod">"Descripcion Producto"</string>
    <string name="ATRAS">"ATRAS"</string>
    <string name="tienesparaofrecer">"¿Qué tienes para ofrecerle a la comunidad?"</string>


</resources>
